Fix footer images vertical alignment

--- a/assets/stylesheets/components/_content-info.scss
+++ b/assets/stylesheets/components/_content-info.scss
@@ -28,7 +28,7 @@
 	max-width: 140px;
 	min-width: 80px;
 
-	padding-top: $gutter / 2;
+	padding-top: 0;
 	padding-bottom: $gutter / 2;
 	margin-right: auto;
 	margin-left: auto;
